Enable ResourceMonitor feature only for web browsers. https://bugs.webkit.org/show_bug.cgi?id=287656 rdar://144808302
Reviewed by Per Arne Vollan.

We don’t want to enable this feature on non-browser WebView. Set the feature off by default
for all platform and enable the flag in Cocoa's `WebPreferences::platformInitializeStore()`.

Also we modify MiniBrowser's Info.plist to accept `http` and `https` so that it should be
treated as full browser app.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultIFrameResourceMonitoringEnabled):
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:
* Source/WebKit/UIProcess/Cocoa/WebPreferencesCocoa.mm:
(WebKit::WebPreferences::platformInitializeStore):
* Tools/MiniBrowser/mac/Info.plist:

Canonical link: https://commits.webkit.org/290378@main

--- a/Tools/MiniBrowser/mac/Info.plist
+++ b/Tools/MiniBrowser/mac/Info.plist
@@ -75,6 +75,15 @@
 			<key>LSHandlerRank</key>
 			<string>none</string>
 		</dict>
+		<dict>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>http</string>
+				<string>https</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
