Unreviewed, reverting 289832@main. https://bugs.webkit.org/show_bug.cgi?id=287681
Caused a page load regression in Googlec

Reverted changeset:

"Re-enable requestIdleCallback on Apple ports"

https://bugs.webkit.org/show_bug.cgi?id=285049
https://commits.webkit.org/289832@main
Canonical link: https://commits.webkit.org/290381@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -6132,7 +6132,7 @@ ReplayCGDisplayListsIntoBackingStore:
 
 RequestIdleCallbackEnabled:
   type: bool
-  status: stable
+  status: testable
   category: dom
   humanReadableName: "requestIdleCallback"
   humanReadableDescription: "Enable requestIdleCallback support"
@@ -6140,7 +6140,6 @@ RequestIdleCallbackEnabled:
     WebKitLegacy:
       default: false
     WebKit:
-      "USE(CF)": true
       default: false
     WebCore:
       default: false
