[Screen Time Refactoring] Add WKWebsiteDataStore property for Screen Time history donations https://bugs.webkit.org/show_bug.cgi?id=285239 rdar://140439004
Reviewed by Aditya Keerthi and Abrar Rahman Protyasha.

Added WKWebsiteDataStore property for Screen Time history deletions with
identifiers.
Created a new WebsiteDataType::ScreenTime.

Altered WebsiteDataStore::fetchDataAndApply to call Screen Time's new
API to obtain urls for a certain profile identifier.

Added two new methods:
- removeScreenTimeData corresponds to removeDataOfTypes that takes
in NSArray<WKWebsiteDataRecord *> * dataRecords
- removeScreenTimeDataWithInterval corresponds to removeDataOfTypes that takes
in an NSDate * date

Wrote two new API tests (RemoveDataWithTimeInterval and RemoveData).
RemoveData relies on Screen Time's API and will need to be changed later on.

* Source/WebCore/PAL/pal/cocoa/ScreenTimeSoftLink.h:
* Source/WebCore/PAL/pal/cocoa/ScreenTimeSoftLink.mm:
* Source/WebKit/NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::monitoredDataTypes):
* Source/WebKit/Shared/WebsiteData/WebsiteData.cpp:
(WebKit::WebsiteData::ownerProcess):
* Source/WebKit/Shared/WebsiteData/WebsiteDataType.h:
* Source/WebKit/Shared/WebsiteData/WebsiteDataType.serialization.in:
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataRecord.mm:
(dataTypesToString):
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataRecordInternal.h:
(WebKit::toWebsiteDataType):
(WebKit::toWKWebsiteDataTypes):
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataRecordPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataStore.mm:
(+[WKWebsiteDataStore allWebsiteDataTypes]):
* Source/WebKit/UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:
(WebKit::WebsiteDataStore::removeScreenTimeData):
(WebKit::WebsiteDataStore::removeScreenTimeDataWithInterval):
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataRecord.h:
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::W

--- a/Source/WebKit/Shared/WebsiteData/WebsiteDataType.serialization.in
+++ b/Source/WebKit/Shared/WebsiteData/WebsiteDataType.serialization.in
@@ -45,4 +45,7 @@ headers: "WebsiteDataType.h"
 #endif
     FileSystem,
     BackgroundFetchStorage,
+#if ENABLE(SCREEN_TIME)
+    ScreenTime,
+#endif
 };
