[visionOS] Fix the drag preview of the <model> element https://bugs.webkit.org/show_bug.cgi?id=287525 rdar://141165213
Reviewed by Wenson Hsieh and Abrar Rahman Protyasha.

For UITargetedDragPreview to capture the snapshot of a view
with entity-based content properly, we need to pass the _UIRemoteView
hosting the model content directly when constructing the UITargetedDragPreview.
To do that, we need to pass the model element’s PlatformLayerIdentifier
in the DragItem, so we can use it to retrieve the _UIRemoteView hosting
the model entity from ModelPresentationManagerProxy in the UI process
to stage the drag session with.
In DragDropInteractionState::createDragPreviewInternal(), if the drag
preview content is the _UIRemoteView rather than an image, create the
UITargetedDragPreview with that view directly.

Handle the edge case where the model element is removed while
it’s being dragged by adding it to the WKContentView’s drag previews
container view.

* Source/WebCore/Modules/model-element/HTMLModelElement.h:
* Source/WebCore/page/DragController.cpp:
(WebCore::DragController::doSystemDrag):
If the dragged element is an HTMLModelElement, save off its
PlatformLayerIdentifier in the DragItem.
* Source/WebCore/platform/DragItem.h:
Include the model element’s PlatformLayerIdentifier
in the DragItem struct.
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.h:
* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _willInvalidateDraggedModelWithContainerView:]):
* Source/WebKit/UIProcess/Model/ModelPresentationManagerProxy.h:
* Source/WebKit/UIProcess/Model/ModelPresentationManagerProxy.mm:
(WebKit::ModelPresentationManagerProxy::startDragForModel):
Add the dragged model’s layer identifier to m_activelyDraggedModelLayerIDs.
Return the _UIRemoteView hosting the model entity.
(WebKit::ModelPresentationManagerProxy::doneWithCurrentDragSession):
Clear m_activelyDraggedModelLayerIDs.
(WebKit::ModelPresentationM

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -7576,6 +7576,9 @@ struct WebCore::DragItem {
     WebCore::IntRect dragPreviewFrameInRootViewCoordinates;
     bool containsSelection;
     WebCore::PromisedAttachmentInfo promisedAttachmentInfo;
+#if ENABLE(MODEL_PROCESS)
+    Markable<WebCore::PlatformLayerIdentifier> modelLayerID;
+#endif
     [NotSerialized] WebCore::PasteboardWriterData data;
 };
 
