[Cocoa] Expose SPI (for prototyping only) to get sampled colors at the edges of fixed-position containers https://bugs.webkit.org/show_bug.cgi?id=287734 rdar://144839983
Reviewed by Abrar Rahman Protyasha.

Add support for new SPI to get an `(NS|UI)Color` for each rect edge of the layout viewport, or null
if there is no fixed-position container near that edge. This color represents the predominant color
for that edge (in the case where there is a predominant color), and otherwise falls back to the
extended page background color.

This mechanism is fully gated behind a new runtime setting, `FixedContainerEdgeSamplingEnabled`,
which is currently off by default (but enabled in the new tests). See below for more details.

* LayoutTests/TestExpectations:
* LayoutTests/fast/page-color-sampling/basic-fixed-container-edge-sampling-expected.txt: Added.
* LayoutTests/fast/page-color-sampling/basic-fixed-container-edge-sampling.html: Added.

Add a new layout test to exercise this SPI.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/resources/ui-helper.js:
(window.UIHelper.fixedContainerEdgeColors):
(window.UIHelper.async waitForFixedContainerEdgeColors):
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/page/PageColorSampler.cpp:
(WebCore::PageColorSampler::predominantColor):

Make a couple of minor adjustments to the color sampling heuristic:

-   Fix a bug where all colors are considered similar to each other, since
    `toResolvedColorComponentsInColorSpace` returns values clamped between (0, 1), but the color
    distance math assumes the results are in the interval (0, 255).

-   Fall back to the page extended background color instead of an invalid color, in the case where
    there is no predominant color.

* Source/WebKit/Shared/Cocoa/WebPreferencesDefaultValuesCocoa.mm:
(defaultFixedContainerEdgeSamplingEnabled):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTree.serialization.

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -3076,6 +3076,20 @@ FilterLinkDecorationByDefaultEnabled:
     WebCore:
       default: true
 
+FixedContainerEdgeSamplingEnabled:
+  type: bool
+  status: internal
+  humanReadableName: "Fixed container edge sampling"
+  humanReadableDescription: "Enable fixed container edge sampling"
+  condition: PLATFORM(COCOA)
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: WebKit::defaultFixedContainerEdgeSamplingEnabled()
+    WebCore:
+      default: false
+
 FixedFontFamily:
   type: String
   status: embedder
