Digital Credentials: Add support for ISO/IEC TS 18013-7 (Annex c) https://bugs.webkit.org/show_bug.cgi?id=287593 radar://143800384
Reviewed by Abrar Rahman Protyasha.

Adds support for the ISO/IEC TS 18013-7 (Annex c) format for the Digital Credentials API.

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Modules/identity/CredentialRequestCoordinator.cpp:
(WebCore::CredentialRequestCoordinator::presentPicker):
* Source/WebCore/Modules/identity/CredentialRequestCoordinator.h:
* Source/WebCore/Modules/identity/DigitalCredential.cpp:
(WebCore::jsToCredentialRequest):
(WebCore::DigitalCredential::discoverFromExternalSource):
* Source/WebCore/Modules/identity/DigitalCredentialRequest.h:
* Source/WebCore/Modules/identity/DigitalCredentialRequest.idl:
* Source/WebCore/Modules/identity/DigitalCredentialsRequestData.h:
* Source/WebCore/Modules/identity/IdentityCredentialProtocol.h:
* Source/WebCore/Modules/identity/IdentityCredentialProtocol.idl:
* Source/WebCore/Modules/identity/MobileDocumentRequest.h: Copied from Source/WebCore/Modules/identity/IdentityCredentialProtocol.h.
* Source/WebCore/Modules/identity/MobileDocumentRequest.idl: Copied from Source/WebCore/Modules/identity/IdentityCredentialProtocol.idl.
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/290458@main

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -403,6 +403,7 @@ set(WebCore_NON_SVG_IDL_FILES
     Modules/identity/DigitalCredentialRequest.idl
     Modules/identity/DigitalCredentialRequestOptions.idl
     Modules/identity/IdentityCredentialProtocol.idl
+    Modules/identity/MobileDocumentRequest.idl
     Modules/identity/OpenID4VPRequest.idl
 
     Modules/indexeddb/IDBCursor.idl
