--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -6422,8 +6422,13 @@ struct WebCore::MockWebAuthenticationConfiguration {
 [Nested] struct WebCore::OpenID4VPRequest {
 };
 
+[Nested] struct WebCore::MobileDocumentRequest {
+    String deviceRequest;
+    String encryptionInfo;
+};
+
 struct WebCore::DigitalCredentialsRequestData {
-    WebCore::DigitalCredentialRequestOptions options;
+    Vector<std::variant<WebCore::MobileDocumentRequest, WebCore::OpenID4VPRequest>> requests;
     [Validator='!topOrigin->isNull()'] WebCore::SecurityOriginData topOrigin;
     [Validator='!documentOrigin->isNull()'] WebCore::SecurityOriginData documentOrigin;
 };
@@ -6431,15 +6436,6 @@ struct WebCore::DigitalCredentialsRequestData {
 struct WebCore::DigitalCredentialsResponseData {
     WebCore::IdentityCredentialProtocol protocol;
     String responseData;
-};
-
-[Nested] struct WebCore::DigitalCredentialRequest {
-    WebCore::IdentityCredentialProtocol protocol;
-    WebCore::OpenID4VPRequest data;
-};
-
-[Nested] struct WebCore::DigitalCredentialRequestOptions {
-    Vector<WebCore::DigitalCredentialRequest> requests;
 };
 
 [Nested] enum class WebCore::IdentityCredentialProtocol : uint8_t {
