--- a/JSTests/test262/config.yaml
+++ b/JSTests/test262/config.yaml
@@ -20,7 +20,6 @@ skip:
     - FinalizationRegistry.prototype.cleanupSome
     - decorators
     - explicit-resource-management
-    - regexp-modifiers
     - source-phase-imports
     - import-defer
   paths:
@@ -77,6 +76,10 @@ skip:
     - test/intl402/Locale/constructor-options-region-valid.js
     - test/intl402/Locale/getters-grandfathered.js
     - test/intl402/Locale/likely-subtags-grandfathered.js
+
+    # Skipping temporarily due to a bug with handling case-insensitive \p escapes
+    - test/built-ins/RegExp/regexp-modifiers/add-ignoreCase-affects-slash-upper-p.js
+    - test/built-ins/RegExp/regexp-modifiers/add-ignoreCase-affects-slash-lower-p.js
 
     # Depends on Temporal.Duration relativeTo option
     - test/built-ins/Temporal/Duration/compare/basic.js
