[SwiftUI] (macOS) Add support for disabling rubber-banding if the content size is less than that of the scroll view size https://bugs.webkit.org/show_bug.cgi?id=287763 rdar://144929647
Reviewed by Simon Fraser.

On iOS, clients may use the `alwaysBounceVertical` and `alwaysBounceHorizontal` properties on `WKWebView.scrollView`
to customize if rubber-banding/bouncing should be enabled if the content size is less than the scroll view size. The
default value of these properties in WebKit is `true`.

This PR brings support for this functionality to macOS by adding likewise, internal methods to WKWebView on macOS.

To facilitate this, the concept of "rubber-bandable edges" is slightly changed; instead of a particular edge being
either rubber-bandable or not, an edge now has three possible states: never rubber-bandable, always rubber-bandable,
and rubber-bandable only if the content size is greater than that of the scroll view size.

* LayoutTests/resources/ui-helper.js:
(window.UIHelper.async setAlwaysBounceVertical):
(window.UIHelper.async setAlwaysBounceHorizontal):
* Tools/DumpRenderTree/mac/UIScriptControllerMac.mm:
(WTR::setScrollBounceBehavior):
* Tools/TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl:
* Tools/TestRunnerShared/UIScriptContext/UIScriptController.h:
(WTR::UIScriptController::setScrollBounceBehavior):
(WTR::UIScriptController::setAlwaysBounceVertical):
(WTR::UIScriptController::setAlwaysBounceHorizontal):
* Tools/WebKitTestRunner/mac/UIScriptControllerMac.h:
* Tools/WebKitTestRunner/mac/UIScriptControllerMac.mm:
(WTR::UIScriptControllerMac::setAlwaysBounceVertical):
(WTR::UIScriptControllerMac::setAlwaysBounceHorizontal):

Test infrastructure.

* LayoutTests/scrollingcoordinator/mac/rubberbanding-always-bounce-short-content-expected.txt: Added.
* LayoutTests/scrollingcoordinator/mac/rubberbanding-always-bounce-short-content.html: Added.
* LayoutTests/scrollingcoordinator/mac/rubberbanding-bounce-based-on-size-short-content-expected.txt

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -2000,6 +2000,13 @@ header: <WebCore/RectEdges.h>
     WebCore::Color left();
 }
 
+[CustomHeader] class WebCore::RectEdges<WebCore::RubberBandingBehavior> {
+    WebCore::RubberBandingBehavior top();
+    WebCore::RubberBandingBehavior right();
+    WebCore::RubberBandingBehavior bottom();
+    WebCore::RubberBandingBehavior left();
+}
+
 [AdditionalEncoder=StreamConnectionEncoder] class WebCore::Path {
     Vector<WebCore::PathSegment> segments();
 }
