[HDR] Ensure HDR layers and IOSurfaces are created only when they contain HDR contents https://bugs.webkit.org/show_bug.cgi?id=282298 rdar://138877325
Reviewed by Simon Fraser.

Each layer will decide whether it needs to draw HDR content or not. The renderer
of the RenderLayer and its sub-tree will be inspected for any HDR image or canvas.

RenderLayer::isReplacedElementWithHDR() will return true if the renderer of the
layer itself needs to draw HDR content. The image of the ImageDocument will be
handled as a special case.

PaintedContentsInfo::isReplacedElementWithHDR() will return whether the renderer
of the layer itself will need to draw HDR content or not.

All the virtual methods hdrForImagesEnabled() will be deleted and replaced by
drawsHDRContent(). drawsHDRContent() will be set to true only if the layer will
need to draw HDR contents and settings.hdrForImagesEnabled() is true.

Since determineNonLayerDescendantsPaintedContent() traverses the render tree of
layer to set hasPaintedContent, it will be used also to set hasPaintedHDRContent
of PaintedContentRequest.

Since RenderLayerBacking::updateDrawsContent() sets GraphicsLayer::setDrawsContent
from the renderer of the layer itself, this function will be used also to set
GraphicsLayer::setDrawsHDRContent() by calling
PaintedContentsInfo::isReplacedElementWithHDR().

PlatformCALayer::contentsFormatForLayer() will call GraphicsLayerCA::drawsHDRContent()
instead of calling hdrForImagesEnabled() to know whether to return RGBA16F for
this layer or not.

For testing support the internal API setScreenContentsFormatsForTesting() is added
to force the screen supported ContentsFormats to certain values.

* LayoutTests/TestExpectations:
* LayoutTests/compositing/hdr/hdr-basic-canvas.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/compositing/hdr/hdr-basic-canvas-expected.txt: Added.
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac-wk2/compositing/hdr/hdr-ba

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -2488,10 +2488,25 @@ header: <WebCore/ScreenProperties.h>
 #endif
 };
 
+#if HAVE(HDR_SUPPORT)
+[OptionSet] enum class WebCore::ContentsFormat : uint8_t {
+    RGBA8,
+#if ENABLE(PIXEL_FORMAT_RGB10)
+    RGBA10,
+#endif
+#if ENABLE(PIXEL_FORMAT_RGBA16F)
+    RGBA16F,
+#endif
+};
+#endif
+
 using WebCore::PlatformDisplayID = uint32_t;
 struct WebCore::ScreenProperties {
     WebCore::PlatformDisplayID primaryDisplayID;
     HashMap<WebCore::PlatformDisplayID, WebCore::ScreenData> screenDataMap;
+#if HAVE(HDR_SUPPORT)
+    OptionSet<WebCore::ContentsFormat> screenContentsFormatsForTesting;
+#endif
 };
 
 class WebCore::PlatformTimeRanges {
