Update `dynamic-range-limit` for latest spec changes https://bugs.webkit.org/show_bug.cgi?id=287710
Reviewed by Tim Nguyen, Darin Adler, and Gerald Squelart.

Two minor changes to the `dynamic-range-limit` spec:
    - `high` has been renamed `no-limit`.
    - `dynamic-range-limit-mix()` now has a lower bound minimum of two elements.

* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/computed.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/inheritance-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/inheritance.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/interpolation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/interpolation.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/parsing-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/parsing.html:
* Source/WebCore/css/CSSValueKeywords.in:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Color.cpp:
* Source/WebCore/css/values/color/CSSDynamicRangeLimit.cpp:
* Source/WebCore/css/values/color/CSSDynamicRangeLimit.h:
* Source/WebCore/css/values/color/CSSDynamicRangeLimitMix.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
* Source/WebCore/style/StyleBuilderConverter.h:
* Source/WebCore/style/values/color/StyleDynamicRangeLimit.cpp:
* Source/WebCore/style/values/color/StyleDynamicRangeLimit.h:
* Source/WebCore/style/values/color/StyleDynamicRangeLimitMix.cpp:
* Source/WebCore/style/values/color/StyleDynamicRangeLimitMix.h:

Canonical link: https://commits.webkit.org/290515@main

--- a/Source/WebCore/css/CSSValueKeywords.in
+++ b/Source/WebCore/css/CSSValueKeywords.in
@@ -1707,8 +1707,12 @@ from-font
 
 // dynamic-range
 standard
-constrained-high
 high
+
+// dynamic-range-limit
+// standard
+constrained-high
+// no-limit
 dynamic-range-limit-mix
 
 // @counter-style `system` descriptor values
