Internal downlevel builds missing _WebKit_SwiftUI module rdar://144916715
Unreviewed build fix.

Temporarily disable WebKit's SwiftUI layer on these builds while we work
to update the Apple internal build config.

* Source/WebKit/Configurations/Base.xcconfig:

Canonical link: https://commits.webkit.org/290517@main

--- a/Source/WebKit/Configurations/Base.xcconfig
+++ b/Source/WebKit/Configurations/Base.xcconfig
@@ -124,7 +124,9 @@ OTHER_SWIFT_FLAGS = $(inherited) -no-warnings-as-errors -Xfrontend -experimental
 OTHER_SWIFT_FLAGS_AVAILABILITY_YES = @$(WK_WEBKITADDITIONS_HEADERS_FOLDER_PATH)/Scripts/availability-definitions.txt;
 OTHER_SWIFT_FLAGS_XCODE_BEFORE_16 = -Xfrontend -enable-experimental-concurrency -Xfrontend -enable-upcoming-feature -Xfrontend IsolatedDefaultValues;
 
-WK_ENABLE_SWIFTUI = YES;
+// Disable SwiftUI overlay on downlevel builds until rdar://145000611 is resolved.
+//WK_ENABLE_SWIFTUI = YES;
+WK_ENABLE_SWIFTUI = $(WK_NOT_$(WK_USE_OVERRIDE_FRAMEWORKS_DIR));
 WK_ENABLE_SWIFTUI[sdk=macosx13*] = NO;
 WK_ENABLE_SWIFTUI[sdk=macosx14*] = NO;
 WK_ENABLE_SWIFTUI[sdk=macosx15*] = NO;
