--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -8027,6 +8027,7 @@ enum class WebCore::AppleVisualEffect : uint8_t {
     BlurChromeMaterial,
 #if HAVE(MATERIAL_HOSTING)
     HostedBlurMaterial,
+    HostedThinBlurMaterial,
 #endif
     VibrancyLabel,
     VibrancySecondaryLabel,
