Add persistence support for ResourceMonitorThrottler https://bugs.webkit.org/show_bug.cgi?id=286652 rdar://142653861
Reviewed by Chris Dumez.

ResourceMonitorThrottler doesn't have persistent support yet and the stored data will be gone
when application quits. Adding persistence support for ResourceMonitorThrottler to make the data
meaningful over launch to launch.

Also change from ApproximateTime to ContinuousApproximateTime to keep counting while sleeping.

Add tests for persistence on API test.

* Source/WTF/wtf/ContinuousApproximateTime.cpp:
(WTF::ContinuousApproximateTime::fromWallTime):
* Source/WTF/wtf/ContinuousApproximateTime.h:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/loader/ResourceMonitorPersistence.cpp: Added.
(WebCore::ResourceMonitorPersistence::ResourceMonitorPersistence):
(WebCore::ResourceMonitorPersistence::~ResourceMonitorPersistence):
(WebCore::continuousApproximateTimeToDouble):
(WebCore::doubleToContinuousApproximateTime):
(WebCore::ResourceMonitorPersistence::reportSQLError):
(WebCore::ResourceMonitorPersistence::openDatabase):
(WebCore::ResourceMonitorPersistence::deleteAllRecords):
(WebCore::ResourceMonitorPersistence::deleteExpiredRecords):
(WebCore::ResourceMonitorPersistence::importRecords):
(WebCore::ResourceMonitorPersistence::recordAccess):
(WebCore::ResourceMonitorPersistence::closeDatabase):
* Source/WebCore/loader/ResourceMonitorPersistence.h: Copied from Source/WebCore/loader/ResourceMonitorThrottler.h.
* Source/WebCore/loader/ResourceMonitorThrottler.cpp:
(WebCore::ResourceMonitorThrottler::ResourceMonitorThrottler):
(WebCore::ResourceMonitorThrottler::~ResourceMonitorThrottler):
(WebCore::ResourceMonitorThrottler::throttlerForHost):
(WebCore::ResourceMonitorThrottler::removeOldestThrottler):
(WebCore::ResourceMonitorThrottler::tryAccess):
(WebCore::ResourceMonitorThrottler::clearAllData):
(WebCore::ResourceMonitorThrottler::maintainHosts):

--- a/Source/WebKit/NetworkProcess/NetworkSessionCreationParameters.serialization.in
+++ b/Source/WebKit/NetworkProcess/NetworkSessionCreationParameters.serialization.in
@@ -107,6 +107,11 @@ enum class WebKit::AllowsCellularAccess : bool;
     std::optional<Vector<std::pair<Vector<uint8_t>, WTF::UUID>>> proxyConfigData;
 #endif
     WebKit::ResourceLoadStatisticsParameters resourceLoadStatisticsParameters;
+
+#if ENABLE(CONTENT_EXTENSIONS)
+    String resourceMonitorThrottlerDirectory;
+    WebKit::SandboxExtensionHandle resourceMonitorThrottlerDirectoryExtensionHandle;
+#endif
 };
 
 #if USE(SOUP)
