Web Automation: generate WebDriver BiDi protocol backend dispatchers from JSON input files https://bugs.webkit.org/show_bug.cgi?id=284322 <rdar://136766847>
Reviewed by Devin Rousso and Patrick Angle.

This change introduces two domain specifications for WebDriver BiDi and hooks up
the protocol code generator to produce C++ backend dispatchers for each domain.
Previously, Automation.json was used to produce an Automation protocol dispatcher.
To support WebDriver BiDi's concept of multiple domains, we take an approach similar
to Web Inspector: combine all the domain definitions into one big JSON file and
call the code generator. Introduce a new class called WebDriverBidiProcessor which
dispatches WebDriver BiDi messages to the available backend domain dispatchers.

In order to interoperate within the existing Automation protocol, we take the nested approach
of adding a command and event to Automation protocol for WebDriverBidi message send/receive.
On the driver side, delivery of the message from Automation.bidiMessageSent to the client is further
mediated by an event publish/subscribe mechanism that matches expected semantics of WebDriver BiDi.

We do not try to handle event pub/sub from UIProcess, as these subscribe/unsubscribe requests can
come in from a session client prior to a browser being launched. Secondly, pub/sub state is per-client
connection, rather than per-session, so this cannot really be mediated from UIProcess.

* Source/WTF/wtf/PlatformEnableCocoa.h: Define ENABLE_WEBDRIVER_BIDI for Cocoa ports.

* Source/WebKit/DerivedSources.make:
For the most part, we can copy the approach taken to generate Inspector Protocol files.

* Source/JavaScriptCore/inspector/scripts/codegen/generate_cpp_backend_dispatcher_header.py:
(CppBackendDispatcherHeaderGenerator._generate_secondary_header_includes):
* Source/JavaScriptCore/inspector/scripts/codegen/generate_cpp_backend_dispatcher_implementation.py:
(CppBackendDispatcherImplementationGenerator._generate_secondary_

--- a/Source/WebKit/CMakeLists.txt
+++ b/Source/WebKit/CMakeLists.txt
@@ -929,7 +929,7 @@ add_custom_command(
     VERBATIM
 )
 
-set(WebKit_AUTOMATION_PROTOCOL_GENERATOR_SCRIPTS
+set(WebKit_JSON_RPC_PROTOCOL_GENERATOR_SCRIPTS
     ${PROTOCOL_GENERATOR_SCRIPTS_DIR}/generate-inspector-protocol-bindings.py
     ${PROTOCOL_GENERATOR_SCRIPTS_DIR}/codegen/cpp_generator.py
     ${PROTOCOL_GENERATOR_SCRIPTS_DIR}/codegen/cpp_generator_templates.py
@@ -951,20 +951,46 @@ set(WebKit_AUTOMATION_PROTOCOL_GENERATOR_INPUTS
 add_custom_command(
     OUTPUT ${WebKit_DERIVED_SOURCES_DIR}/AutomationBackendDispatchers.h ${WebKit_DERIVED_SOURCES_DIR}/AutomationBackendDispatchers.cpp ${WebKit_DERIVED_SOURCES_DIR}/AutomationProtocolObjects.h ${WebKit_DERIVED_SOURCES_DIR}/AutomationProtocolObjects.cpp ${WebKit_DERIVED_SOURCES_DIR}/AutomationFrontendDispatchers.h ${WebKit_DERIVED_SOURCES_DIR}/AutomationFrontendDispatchers.cpp
     MAIN_DEPENDENCY ${WebKit_AUTOMATION_PROTOCOL_GENERATOR_INPUTS}
-    DEPENDS ${WebKit_AUTOMATION_PROTOCOL_GENERATOR_SCRIPTS}
+    DEPENDS ${WebKit_JSON_RPC_PROTOCOL_GENERATOR_SCRIPTS}
     COMMAND ${PYTHON_EXECUTABLE} ${PROTOCOL_GENERATOR_SCRIPTS_DIR}/generate-inspector-protocol-bindings.py --outputDir "${WebKit_DERIVED_SOURCES_DIR}" --framework WebKit ${WebKit_AUTOMATION_PROTOCOL_GENERATOR_EXTRA_FLAGS} --backend ${WebKit_AUTOMATION_PROTOCOL_GENERATOR_INPUTS}
+    VERBATIM)
+
+set(WebKit_WEBDRIVER_BIDI_PROTOCOL_GENERATOR_INPUTS
+    ${WEBKIT_DIR}/UIProcess/Automation/protocol/BidiBrowser.json
+    ${WEBKIT_DIR}/UIProcess/Automation/protocol/BidiBrowsingContext.json
+    ${WEBKIT_DIR}/UIProcess/Automation/protocol/BidiLog.json
+)
+
+add_custom_command(
+    OUTPUT ${WebKit_DERIVED_SOURCES_DIR}/CombinedWebDriverBidiDomains.json
+    MAIN_DEPENDENCY ${JavaScriptCore_SCRIPTS_DIR}/generate-combined-inspector-json.py
+    DEPENDS ${WebKit_WEBDRIVER_BIDI_PROTOCOL_GENERATOR_INPUTS}
+    COMMAND ${PYTHON_EXECUTABLE} ${JavaScriptCore_SCRIPTS_DIR}/generate-combined-inspector-json.py ${WebKit_WEBDRIVER_BIDI_PROTOCOL_GENERATOR_INPUTS} "${FEATURE_DEFINES_WITH_SPACE_SEPARATOR}" > ${WebKit_DERIVED_SOURCES_DIR}/CombinedWebDriverBidiDomains.json
+    VERBATIM)
+
+add_custom_command(
+    OUTPUT ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiBackendDispatchers.h ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiBackendDispatchers.cpp ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiProtocolObjects.h ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiProtocolObjects.cpp ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiFrontendDispatchers.h ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiFrontendDispatchers.cpp
+    MAIN_DEPENDENCY ${WebKit_DERIVED_SOURCES_DIR}/CombinedWebDriverBidiDomains.json
+    DEPENDS ${WebKit_JSON_RPC_PROTOCOL_GENERATOR_SCRIPTS}
+    COMMAND ${PYTHON_EXECUTABLE} ${PROTOCOL_GENERATOR_SCRIPTS_DIR}/generate-inspector-protocol-bindings.py --outputDir "${WebKit_DERIVED_SOURCES_DIR}" --framework WebDriverBidi ${WebKit_AUTOMATION_PROTOCOL_GENERATOR_EXTRA_FLAGS} --backend ${WebKit_DERIVED_SOURCES_DIR}/CombinedWebDriverBidiDomains.json
     VERBATIM)
 
 list(APPEND WebKit_HEADERS
     ${WebKit_DERIVED_SOURCES_DIR}/AutomationBackendDispatchers.h
     ${WebKit_DERIVED_SOURCES_DIR}/AutomationFrontendDispatchers.h
     ${WebKit_DERIVED_SOURCES_DIR}/AutomationProtocolObjects.h
+    ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiBackendDispatchers.h
+    ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiFrontendDispatchers.h
+    ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiProtocolObjects.h
 )
 
 list(APPEND WebKit_SOURCES
     ${WebKit_DERIVED_SOURCES_DIR}/AutomationBackendDispatchers.cpp
     ${WebKit_DERIVED_SOURCES_DIR}/AutomationFrontendDispatchers.cpp
     ${WebKit_DERIVED_SOURCES_DIR}/AutomationProtocolObjects.cpp
+    ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiBackendDispatchers.cpp
+    ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiFrontendDispatchers.cpp
+    ${WebKit_DERIVED_SOURCES_DIR}/WebDriverBidiProtocolObjects.cpp
 )
 
 add_custom_command(
