JSWebAssemblyInstance should be allocated out of a new PreciseSubspace. https://bugs.webkit.org/show_bug.cgi?id=287518 rdar://144647030
Reviewed by Yusuke Suzuki.

Previously we added a new mode, preciseOnly, to IsoSubspace. However, this was unnecessarily complicated
and wasteful. Additionally, it was confusing since most places assumed IsoSubspaces always allocated
objects of the same size.

This change adds a new PreciseSubspace that always allocates objects into a PreciseAllocation and factors
out most of this logic. In a subsequent patch I'll remove the old, now dead, preciseOnly logic.

I tried to have the heap account for IsoSubspace's lower tier precise as part of it's capacity
but that seemed to cause significant performance regressions across the board both in memory and runtime.
So I'm going to skip that for now with a FIXME to correct it later.

* JSTests/wasm/stress/stress-JSWebAssemblyInstance-allocations.js: Added.
(catch):
* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
* Source/JavaScriptCore/Sources.txt:
* Source/JavaScriptCore/heap/CompleteSubspace.cpp:
(JSC::CompleteSubspace::tryAllocateSlow):
* Source/JavaScriptCore/heap/Heap.cpp:
(JSC::Heap::deleteAllCodeBlocks):
(JSC::Heap::updateAllocationLimits):
(JSC::Heap::webAssemblyInstanceSpaceSlow):
* Source/JavaScriptCore/heap/Heap.h:
(JSC::Heap::webAssemblyInstanceSpace):
* Source/JavaScriptCore/heap/IsoSubspace.cpp:
(JSC::IsoSubspace::tryAllocatePreciseOrLowerTierPrecise):
* Source/JavaScriptCore/heap/MarkedSpace.cpp:
(JSC::MarkedSpace::registerPreciseAllocation):
* Source/JavaScriptCore/heap/MarkedSpace.h:
* Source/JavaScriptCore/heap/PreciseAllocation.h:
* Source/JavaScriptCore/heap/PreciseSubspace.cpp: Added.
(JSC::PreciseSubspace::PreciseSubspace):
(JSC::PreciseSubspace::didResizeBits):
(JSC::PreciseSubspace::didRemoveBlock):
(JSC::PreciseSubspace::didBeginSweepingToFreeList):
(JSC::PreciseSubspace::tryAllocate):
(JSC::PreciseSubspace::allocate):
* Source/JavaScriptCore/heap/Pr

--- a/Source/JavaScriptCore/CMakeLists.txt
+++ b/Source/JavaScriptCore/CMakeLists.txt
@@ -764,6 +764,7 @@ set(JavaScriptCore_PRIVATE_FRAMEWORK_HEADERS
     heap/MutatorState.h
     heap/PackedCellPtr.h
     heap/PreciseAllocation.h
+    heap/PreciseSubspace.h
     heap/RegisterState.h
     heap/RootMarkReason.h
     heap/RunningScope.h
