[HDR] Combine CSSDynamicRangeLimitPropertyEnabled and HDRForImagesEnabled in one experimental feature called SupportHDRDisplayEnabled https://bugs.webkit.org/show_bug.cgi?id=287971# rdar://145148751
Reviewed by Simon Fraser.

The dynamic-range-limit property will be applied when displaying HDR images. To
make it easy to enable HDR images in WebKit, these two feature flags will be
replaced by only one generic feature flag.

The plan is replace feature flags for other elements like 2D canvas and WebGPU
with this generic one.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WTF/wtf/PlatformEnable.h:
* Source/WTF/wtf/PlatformEnableCocoa.h:
* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/loader/cache/CachedImage.h:
* Source/WebCore/page/Page.cpp:
(WebCore::Page::canDrawHDRContents const):
* Source/WebCore/page/Page.h:
* Source/WebCore/platform/PlatformScreen.cpp:
* Source/WebCore/platform/PlatformScreen.h:
* Source/WebCore/platform/ScreenProperties.h:
* Source/WebCore/platform/graphics/GraphicsLayer.cpp:
(WebCore::GraphicsLayer::dumpProperties const):
* Source/WebCore/platform/graphics/GraphicsLayer.h:
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::commitLayerChangesBeforeSublayers):
(WebCore::GraphicsLayerCA::ensureStructuralLayer):
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h:
* Source/WebCore/platform/graphics/ca/PlatformCALayerClient.h:
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawNativeImageInternal):
* Source/WebCore/platform/graphics/cg/NativeImageCG.cpp:
(WebCore::PlatformImageNativeImageBackend::headroom const):
* Source/WebCore/platform/ios/PlatformScreenIOS.mm:
(WebCore::screenSupportsExtendedColor):
(WebCore::screenSupportsHighDynamicRange):
* Source/WebCore/platform/mac/PlatformScreenMac.mm:
(WebCore::screenSupportsExtendedColor):
(WebCore::screenSupportsHighDynamicRange):
* Source/WebCore/renderi

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -1216,20 +1216,6 @@ CSSDPropertyEnabled:
     WebCore:
       default: false
 
-CSSDynamicRangeLimitPropertyEnabled:
-  type: bool
-  status: testable
-  category: css
-  humanReadableName: "CSS dynamic-range-limit"
-  humanReadableDescription: "Enable support for the CSS Color HDR Module Level 1 dynamic-range-limit CSS property"
-  defaultValue:
-    WebKitLegacy:
-      default: false
-    WebKit:
-      default: false
-    WebCore:
-      default: false
-
 CSSFieldSizingEnabled:
   type: bool
   status: testable
@@ -3393,22 +3379,6 @@ GraphicsContextFiltersEnabled:
        default: true
      WebCore:
        default: true
-
-HDRForImagesEnabled:
-  type: bool
-  status: testable
-  category: media
-  webcoreOnChange: setNeedsRelayoutAllFrames
-  humanReadableName: "HDR for Images Support"
-  humanReadableDescription: "HDR for Images Support"
-  condition: ENABLE(HDR_FOR_IMAGES)
-  defaultValue:
-    WebKitLegacy:
-      default: false
-    WebKit:
-      default: false
-    WebCore:
-      default: false
 
 HTTPEquivEnabled:
   type: bool
@@ -7381,6 +7351,21 @@ StorageBlockingPolicy:
       default: WebCore::StorageBlockingPolicy::BlockThirdParty
     WebCore:
       default: StorageBlockingPolicy::AllowAll
+
+SupportHDRDisplayEnabled:
+  type: bool
+  status: testable
+  category: media
+  webcoreOnChange: setNeedsRelayoutAllFrames
+  humanReadableName: "Support HDR Display"
+  humanReadableDescription: "Support HDR Display"
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
 
 SuppressesIncrementalRendering:
   type: bool
