[MSE][Mac] Add TextTrack support to SourceBufferPrivateAVFObjC. https://bugs.webkit.org/show_bug.cgi?id=125161 rdar://137769578
Reviewed by Jean-Yves Avenard.

Add general TextTrack support to SourceBufferPrivateAVFObjC, and add support for muxed
WebVTT tracks.

* LayoutTests/media/media-source/content/bip-bop-webvtt-frag.mp4: Added.
* LayoutTests/media/media-source/media-managedmse-webvtt-track-expected.txt: Added.
* LayoutTests/media/media-source/media-managedmse-webvtt-track.html: Added.
* LayoutTests/platform/glib/TestExpectations: Skip new test.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml: Add new runtime setting.

* Source/WTF/wtf/Logger.h:
(WTF::LogArgument::toString): Support logging a StringView.

* Source/WebCore/Headers.cmake:

* Source/WebCore/Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::createSourceBufferPrivate):

* Source/WebCore/PAL/pal/cocoa/AVFoundationSoftLink.h:
* Source/WebCore/PAL/pal/cocoa/AVFoundationSoftLink.mm: Add AVMediaTypeText.

* Source/WebCore/SourcesCocoa.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:

* Source/WebCore/html/track/InbandTextTrack.cpp:
(WebCore::InbandTextTrack::create): Add `CueFormat::Unknown` to switch statement.

* Source/WebCore/html/track/InbandWebVTTTextTrack.cpp:
(WebCore::InbandWebVTTTextTrack::parseWebVTTFileHeader): Added.
* Source/WebCore/html/track/InbandWebVTTTextTrack.h:

* Source/WebCore/platform/graphics/InbandTextTrackPrivate.h: Add `CueFormat::Unknown`
so `m_format` can be initialized.

* Source/WebCore/platform/graphics/InbandTextTrackPrivate.serialization.in: Serialize
`CueFormat::Unknown`.

* Source/WebCore/platform/graphics/MediaSourceConfiguration.h:
* Source/WebCore/platform/graphics/MediaSourcePrivate.h:
* Source/WebCore/platform/graphics/TrackPrivateBase.cpp:
(WebCore::TrackPrivateBase::notifyMainThreadClient):

* Source/WebCore/platform/graphics/avfoundation/AVTrackPrivateAVFObjCImpl.h:
* Source/WebCore/platform/graphics/avfoundation/AVTrackPrivateAV

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -8080,6 +8080,11 @@ header: <WebCore/SourceBufferPrivateClient.h>
 
 using WebCore::SourceBufferPrivate::SamplesPromise::Result = Expected<Vector<String>, WebCore::PlatformMediaError>
 
+header: <WebCore/MediaSourceConfiguration.h>
+struct WebCore::MediaSourceConfiguration {
+    bool textTracksEnabled;
+};
+
 #endif
 
 header: <WebCore/Font.h>
